src/test/resources/success/basic/Problem2.scala
package success.basic

import forcedtodo.todo

@todo("Something", until = "2050-08-04")
class Problem2 {
}



