src/test/resources/fail/mixed/Problem.scala
package fail.mixed

import forcedtodo.todo

@todo("Should be done by now", "1990-01-01")
class Problem {
}



